--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,70 @@
-.navbar-lewagon {
+.navbar-firststage {
+  background: #e0e0e0;
+  padding: 5px;
+  height: 60px;
+}
+
+.navbar-container {
+  display: flex;
+  align-items: center;
   justify-content: space-between;
-  background: white;
+  width: 100%;
+  padding: 10px;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
+.navbar-buttons {
+  flex-grow: 1;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
-.navbar-lewagon .navbar-brand img {
+.navbar-firststage .navbar-brand .logo-circle {
   width: 40px;
+  height: 40px;
+  background-color: #333;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 14px;
+}
+
+.navbar-nav {
+  display: flex;
+  gap: 20px;
+}
+
+.nav-item {
+  list-style: none;
+  padding: 20px;
+}
+
+.nav-link {
+  color: #333;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: #000;
+}
+
+.search-form {
+  display: flex;
+  align-items: center;
+}
+
+.form-control {
+  background-color: #f5f5f5;
+}
+
+.btn-outline-success {
+  color: #333;
+  border-color: #333;
+}
+
+.btn-outline-success:hover {
+  color: #000;
+  border-color: #000;
 }
