--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,15 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
-
-    <%= yield %>
+  <body>
+    <nav>
+      <%= render "shared/navbar" %>
+      <%= render "shared/flashes" %>
+    <div>
+      <%= yield %>
+    </div>
+    <div>
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
