--- a/app/views/interviewers/become_interviewer.html.erb
+++ b/app/views/interviewers/become_interviewer.html.erb
@@ -2,5 +2,17 @@
   <%= f.input :years_experience %>
   <%= f.input :headline %>
   <%= f.input :about %>
-  <%= f.button :submit, "Sign up" %>
+
+  <div class="form-group">
+    <%= f.label :tag_ids, "Select Tags" %>
+    <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name do |b| %>
+      <div class="checkbox">
+        <label>
+          <%= b.check_box %> <%= b.text %>
+        </label>
+      </div>
+    <% end %>
+  </div>
+  
+  <%= f.button :submit, "Become interviewer" %>
 <% end %>
