--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-firststage">
-  <div class="navbar-container">
+  <div class="railsnavbar-container">
     <%= link_to "#", class: "navbar-brand" do %>
       <div class="logo-circle">
         <span>logo</span>
