filter bar created

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,7 @@
 <div class="container">
+  <%= render 'shared/filter_bar' %>
+</div>
+
+<div class="container">
   <%= render 'shared/user_card' %>
 </div>
