--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,36 @@
 <footer class="footer">
-  <div class="footer-content">
-    <div class="footer-firststage">
-      <a href="/contact">Contact</a>
-      <a href="/contact">FAQ</a>
-      <a href="/about_us">About us</a>
+  <div class="footer-container">
+
+    <ul class="foot-menu">
+      <li class="foot-item">
+        <a href="#" class="foot-links">Contact</a>
+      </li>
+      <li class="foot-item">
+        <a href="#" class="foot-links">FAQ</a>
+      </li>
+      <li class="foot-item">
+        <a href="#" class="foot-links">About us</a>
+      </li>
+    </ul>
+
+    <ul class="footer-social">
+      <li class="social-item">
+        <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
+      </li>
+      <li class="social-item">
+        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      </li>
+      <li class="social-item">
+        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      </li>
+      <li class="social-item">
+        <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+      </li>
+    </ul>
+
+    <div class="hamburger">
+      <i class="fas fa-bars"></i>
     </div>
-    <div class="footer-social">
-      <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
-      <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-    </div>
+
   </div>
 </footer>
