--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,25 +1,25 @@
-.navbar-firststage {
-  background: #e0e0e0;
-  padding: 5px;
-  height: 60px;
+.navbar {
+  background-color: #e0e0e0;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10;
 }
 
 .navbar-container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
-  padding: 10px;
+  margin: 0;
 }
 
-.navbar-buttons {
-  flex-grow: 1;
-  display: flex;
-  width: 100%;
-  justify-content: space-around;
-}
-
-.navbar-firststage .navbar-brand .logo-circle {
+.navbar-brand .logo-circle {
   width: 40px;
   height: 40px;
   background-color: #333;
@@ -31,40 +31,55 @@
   font-size: 14px;
 }
 
-.navbar-nav {
+.nav-menu {
   display: flex;
-  gap: 20px;
+  flex-basis: auto;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav-item {
-  list-style: none;
-  padding: 20px;
+  margin: 0 50px;
 }
 
-.nav-link {
+.nav-links {
   color: #333;
   text-decoration: none;
+  transition: all 0.3s ease-in-out;
 }
 
-.nav-link:hover {
-  color: #000;
+.nav-links:hover {
+  color: grey;
 }
 
-.search-form {
+.search-bar {
   display: flex;
+  justify-content: center;
   align-items: center;
+
+  .fa-search {
+    color: #333;
+    margin-right: 10px;
+  }
 }
 
 .form-control {
   background-color: #f5f5f5;
 }
 
-.btn-outline-success {
-  color: #333;
-  border-color: #333;
+.hamburger {
+  display: none;
+  cursor: pointer;
 }
 
-.btn-outline-success:hover {
-  color: #000;
-  border-color: #000;
+
+@media (max-width: 768px) {
+  .nav-menu {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+  }
 }
