--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,13 @@
   </head>
 
   <body>
-    <nav>
+    <div class="footer-fix">
       <%= render "shared/navbar" %>
       <%= render "shared/flashes" %>
-    <div>
-      <%= yield %>
-    </div>
-    <div>
-      <%= render "shared/footer" %>
+      <div class="content">
+        <%= yield %>
+      </div>
+        <%= render "shared/footer" %>
     </div>
   </body>
 </html>
