--- a/app/views/shared/_filter_bar.html.erb
+++ b/app/views/shared/_filter_bar.html.erb
@@ -7,7 +7,7 @@
         </button>
       </h2>
       <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+        <div class="accordion-body">Placeholder</div>
       </div>
     </div>
     <div class="accordion-item mb-3">
@@ -17,7 +17,7 @@
         </button>
       </h2>
       <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+        <div class="accordion-body">Placeholder</div>
       </div>
     </div>
     <div class="accordion-item mb-3">
@@ -27,7 +27,7 @@
         </button>
       </h2>
       <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+        <div class="accordion-body">Placeholder</div>
       </div>
     </div>
     <div class="accordion-item mb-3">
@@ -37,7 +37,7 @@
         </button>
       </h2>
       <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the fourth item's accordion body.</div>
+        <div class="accordion-body">Placeholder</div>
       </div>
     </div>
     <div class="accordion-item mb-3">
@@ -47,7 +47,7 @@
         </button>
       </h2>
       <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the fifth item's accordion body.</div>
+        <div class="accordion-body">Placeholder</div>
       </div>
     </div>
   </div>
