--- a/app/views/interviewers/become_interviewer.html.erb
+++ b/app/views/interviewers/become_interviewer.html.erb
@@ -3,16 +3,10 @@
   <%= f.input :headline %>
   <%= f.input :about %>
 
-  <div class="form-group">
-    <%= f.label :tag_ids, "Select Tags" %>
-    <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name do |b| %>
-      <div class="checkbox">
-        <label>
-          <%= b.check_box %> <%= b.text %>
-        </label>
-      </div>
-    <% end %>
-  </div>
-  
+  <%= f.association :tags,
+                  as: :check_boxes,
+                  input_html: { class: "tag-selector" },
+                  item_wrapper_class: 'tag-item' %>
+
   <%= f.button :submit, "Become interviewer" %>
 <% end %>
