update show page

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -28,15 +28,15 @@
 .social-media-list {
   list-style: none;
   padding: 0;
+  margin-left: 45px;
 }
 
 .social-media-list li {
   display: inline-block;
-  margin-right: 5px;
 }
 
 .social-link-img {
-  height: 25px;
+  height: 20px;
 }
 
 .show-social-links {
