--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,7 @@
         </div>
         <div></div>
       </div>
+      <p><%= @user.headline %></p>
     </div>
     <div class="user-buttons col-12 col-sm-4 col-md-4 col-lg-4">
     </div>
