--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,9 @@
 <footer class="footer">
   <div class="footer-container">
 
+    <div class="footer-left">
+    </div>
+    
     <ul class="foot-menu">
       <li class="foot-item">
         <a href="#" class="foot-links">Contact</a>
