--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -53,24 +53,33 @@
 
 .search-bar {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   .fa-search {
     color: #333;
     margin-right: 10px;
   }
+
 }
 
 .form-control {
   background-color: #f5f5f5;
 }
 
+.navbar-avatar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: auto;
+  margin: 0;
+  padding: 0;
+}
+
 .hamburger {
   display: none;
   cursor: pointer;
 }
-
 
 @media (max-width: 768px) {
   .nav-menu {
