--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="footer">
   <div class="footer-container">
 
-    <div class="footer-left">
+    <div class="footer-menu-left">
     </div>
-    
-    <ul class="foot-menu">
+
+    <ul class="footer-menu-center">
       <li class="foot-item">
         <a href="#" class="foot-links">Contact</a>
       </li>
@@ -16,7 +16,7 @@
       </li>
     </ul>
 
-    <ul class="footer-social">
+    <ul class="footer-menu-right">
       <li class="social-item">
         <a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a>
       </li>
