--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -17,26 +17,29 @@
   margin: 0;
 }
 
-.footer-left {
+.footer-menu-left {
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-basis: auto;
-  width: 20%;
-}
-
-.foot-menu {
-  display: flex;
-  justify-content: center;
-  flex-basis: auto;
-  width: 100%;
   list-style: none;
+  width: 20%;
   margin: 0;
   padding: 0;
 }
 
-.foot-item {
-  margin: 0 50px;
+.footer-menu-center {
+  display: flex;
+  justify-content: center;
+  flex-basis: auto;
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  .foot-item {
+    margin: 0 50px;
+  }
 }
 
 .foot-links {
@@ -49,12 +52,12 @@
   color: grey;
 }
 
-.footer-social {
+.footer-menu-right {
   display: flex;
   justify-content: space-between;
   flex-basis: auto;
-  width: 20%;
   list-style: none;
+  width: 20%;
   margin: 0;
   padding: 0;
 }
