--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -17,28 +17,41 @@
   margin: 0;
 }
 
-.navbar-brand .logo-circle {
-  width: 40px;
-  height: 40px;
-  background-color: #333;
-  color: white;
+.nav-menu-left {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  font-size: 14px;
-}
-
-.nav-menu {
-  display: flex;
   flex-basis: auto;
   list-style: none;
+  width: 20%;
   margin: 0;
   padding: 0;
+
+  .navbar-brand .logo-circle {
+    width: 40px;
+    height: 40px;
+    background-color: #333;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    font-size: 14px;
+  }
 }
 
-.nav-item {
-  margin: 0 50px;
+.nav-menu-center {
+  display: flex;
+  justify-content: center;
+  flex-basis: auto;
+  list-style: none;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+  .nav-item {
+    margin: 0 50px;
+  }
 }
 
 .nav-links {
@@ -51,6 +64,18 @@
   color: grey;
 }
 
+.nav-menu-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-basis: auto;
+  list-style: none;
+  width: 20%;
+  margin: 0;
+  padding: 0;
+
+}
+
 .search-bar {
   display: flex;
   justify-content: space-between;
@@ -61,17 +86,17 @@
     margin-right: 10px;
   }
 
-}
+  .form-control {
+    background-color: #f5f5f5;
+  }
 
-.form-control {
-  background-color: #f5f5f5;
 }
 
 .navbar-avatar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-basis: auto;
+  text-decoration: none;
   margin: 0;
   padding: 0;
 }
