--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -78,11 +78,11 @@
 
 
 @media (max-width: 768px) {
-  .foot-menu {
+  .footer-menu-center {
     display: none;
   }
 
-  .footer-social {
+  .footer-menu-right {
     display: none;
   }
 
