--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,5 +3,10 @@
 </div>
 
 <div class="container">
+  <%= render 'shared/review_card' %>
+</div>
+
+
+<div class="container">
   <%= render 'shared/user_card' %>
 </div>
