--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,4 +32,7 @@
     <div class="user-buttons col-12 col-sm-4 col-md-4 col-lg-4">
     </div>
   </div>
+  <div class="container">
+    <%= render 'shared/review_card' %>
+  </div>
 </div>
