--- a/app/views/interviewers/become_interviewer.html.erb
+++ b/app/views/interviewers/become_interviewer.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :headline %>
   <%= f.input :about %>
   <%= f.input :linkedin, label: "LinkedIn profile URL"%>
-  <%= f.input :github, label: "Github profile URL"%> %>
+  <%= f.input :github, label: "Github profile URL"%>
 
   <%= f.association :tags,
                   as: :check_boxes,
