--- a/app/views/shared/_review_card.html.erb
+++ b/app/views/shared/_review_card.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="review-user-info">
     <div class="review-user-details">
-      <div class="review-avatar"></div>
+      <img class="review-avatar" alt="avatar" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/59/User-avatar.svg/2048px-User-avatar.svg.png" />
       <span class="review-username">Sarahh3</span>
     </div>
       <span class="review-date">13th Jan</span>
