--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,4 +8,6 @@
 @import "card_home";
 @import "user_card";
 @import "pills";
-@import "review_card"
+@import "review_card";
+@import "signup_form";
+@import "signin_form";
