--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,37 +1,45 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container-signup-form">
+  <div class="row justify-content-center">
+    <div class="col-md-6 col-sm-4 col-sm-offset-4">
+      <div class="signup-form">
+          <h2><strong>Edit <%= resource_name.to_s.humanize %></strong></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true %>
-    <%= f.input :first_name,
-                required: true,
-                input_html: { autocomplete: "given-name" } %>
-    <%= f.input :last_name,
-                required: true,
-                input_html: { autocomplete: "family-name" } %>
-    <%= f.input :years_of_experience,
-                required: true,
-                as: :integer %>
-    <%= f.input :address,
-                required: true %>
-    <%= f.input :username,
-                required: true %>
+            <div class="form-inputs">
+              <%= f.input :email,
+                          required: true,
+                          autofocus: true,
+                          input_html: { autocomplete: "email" } %>
+              <%= f.input :password,
+                          required: true,
+                          hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                          input_html: { autocomplete: "new-password" } %>
+              <%= f.input :password_confirmation,
+                          required: true %>
+              <%= f.input :first_name,
+                          required: true,
+                          input_html: { autocomplete: "given-name" } %>
+              <%= f.input :last_name,
+                          required: true,
+                          input_html: { autocomplete: "family-name" } %>
+              <%= f.input :years_of_experience,
+                          required: true,
+                          as: :integer %>
+              <%= f.input :address,
+                          required: true %>
+              <%= f.input :username,
+                          required: true %>
+            </div>
+
+            <div class="form-actions">
+              <%= f.button :submit, "Update", class: "btn-primary" %>
+            </div>
+          <% end %>
+
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
