--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,39 @@
 <div class="container-signup">
   <div class="row justify-content-center">
-    <div class="col-xs-12 col-sm-4 col-sm-offset-4">
-      <h2><strong>Sign up</strong></h2>
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
+    <div class="col-md-6 col-sm-4 col-sm-offset-4">
+      <div class="signup-form">
+        <h2><strong>Sign up</strong></h2>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= f.error_notification %>
 
-        <div class="form-inputs">
-          <%= f.input :email,
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "email" } %>
-          <%= f.input :password,
-                      required: true,
-                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
-                      required: true %>
-          <%= f.input :first_name,
-                      required: true,
-                      input_html: { autocomplete: "given-name" } %>
-          <%= f.input :last_name,
-                      required: true,
-                      input_html: { autocomplete: "family-name" } %>
-          <%= f.input :address,
-                      required: true %>
-          <%= f.input :username,
-                      required: true %>
-        </div>
+          <div class="form-inputs">
+            <%= f.input :email,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "email" } %>
+            <%= f.input :password,
+                        required: true,
+                        hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                        input_html: { autocomplete: "new-password" } %>
+            <%= f.input :password_confirmation,
+                        required: true %>
+            <%= f.input :first_name,
+                        required: true,
+                        input_html: { autocomplete: "given-name" } %>
+            <%= f.input :last_name,
+                        required: true,
+                        input_html: { autocomplete: "family-name" } %>
+            <%= f.input :address,
+                        required: true %>
+            <%= f.input :username,
+                        required: true %>
+          </div>
           <div class="form-actions">
-          <%= f.button :submit, "Sign up" %>
+          <%= f.button :submit, "Sign up", class: "btn-primary" %>
        </div>
       <% end %>
-      
         <%= render "devise/shared/links" %>
+      </div>
     </div>
-  
-
+  </div>
+</div>
