--- a/app/views/shared/_user_card.html.erb
+++ b/app/views/shared/_user_card.html.erb
@@ -27,7 +27,7 @@
             <p><%= user.about %></p>
           </div>
           <div class="price-capacity">
-            <div class="capacity-icon"><i class="fa-solid fa-location-dot"></i> <h2 class="card-user-capacity ms-2"> <%= user.address %></h2></div>
+            <div class="capacity-icon"><i class="fa-solid fa-location-dot"></i> <p class="card-user-capacity ms-2"> <%= user.address %></p></div>
             <h2 class="card-user-pricing"><%= user.years_experience %> <%= "year".pluralize(user.years_experience) %> experience</h2>
           </div>
         </div>
