--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -70,7 +70,7 @@
   align-items: center;
   flex-basis: auto;
   list-style: none;
-  width: 20%;
+  width: 22%;
   margin: 0;
   padding: 0;
 
@@ -92,17 +92,19 @@
 
 }
 
-.navbar-avatar {
+.navbar-avatar-2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
   margin: 0;
   padding: 0;
+  width: 140px;
 
   a {
     color: grey;
-    margin-right: 10px;
+    margin-left: 10px;
+    padding: 0px;
   }
 }
 
@@ -119,4 +121,8 @@
   .hamburger {
     display: block;
   }
+}
+
+.search-bar-box {
+  width: 200px !important;
 }
