--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,10 +27,10 @@
       <div class="search-bar">
         <i class="fas fa-search"></i>
         <form class="search-form">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2 search-bar-box" type="search" placeholder="Search" aria-label="Search">
         </form>
       </div>
-      <div class="navbar-avatar">
+      <div class="navbar-avatar-2">
         <% if user_signed_in? %>
           <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %>
         <% else %>
