--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
               <%= f.input :last_name,
                           required: true,
                           input_html: { autocomplete: "family-name" } %>
-              <%= f.input :years_of_experience,
+              <%= f.input :years_experience,
                           required: true,
                           as: :integer %>
               <%= f.input :address,
