--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -13,16 +13,15 @@
   left: 10%;
   top: 30px;
   border: 1px solid white;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.2);
 }
 
 .user-details {
   background-color: bisque;
-  height: 160px;
 }
 
 .user-buttons {
   background-color: rgb(241, 196, 255);
-  height: 160px;
 }
 
 .social-media-list {
@@ -48,4 +47,13 @@
   display: flex;
   align-items: center;
   justify-content: start;
+}
+
+.username-location-etc {
+  display: flex;
+  justify-content: space-between;
+}
+
+.username-location-etc p {
+  opacity: 0.6;
 }
