--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -17,11 +17,11 @@
 }
 
 .user-details {
-  background-color: bisque;
+  // background-color: bisque;
 }
 
 .user-buttons {
-  background-color: rgb(241, 196, 255);
+  // background-color: rgb(241, 196, 255);
 }
 
 .social-media-list {
@@ -56,4 +56,8 @@
 
 .username-location-etc p {
   opacity: 0.6;
+}
+
+.user-details-buttons {
+  border-bottom: solid 1px rgb(187, 187, 187);
 }
